force-app/main/default/objects/Quote_Line_Detail__c/fields/VAS_TPXRECB__c.field-meta.xml
<CustomField>
    <fullName>VAS_TPXRECB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TPX Call Recording Basic</label>
    <type>Checkbox</type>
</CustomField>