force-app/main/default/objects/Quote_Line_Detail__c/fields/VAS_UC_License__c.field-meta.xml
<CustomField>
    <fullName>VAS_UC_License__c</fullName>
    <inlineHelpText>Add the UC license relevant for the specific user if part of quote</inlineHelpText>
    <label>UC License</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UC_License</valueSetName>
    </valueSet>
</CustomField>