force-app/main/default/objects/Quote_Line_Detail__c/fields/VLANs__c.field-meta.xml
<CustomField>
    <fullName>VLANs__c</fullName>
    <label>VLAN&apos;s</label>
    <length>255</length>
    <type>Text</type>
</CustomField>