force-app/main/default/objects/Quote_Line_Detail__c/fields/VPN_number__c.field-meta.xml
<CustomField>
    <fullName>VPN_number__c</fullName>
    <label>VPN number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>