force-app/main/default/objects/Quote_Line_Detail__c/fields/Wallboard__c.field-meta.xml
<CustomField>
    <fullName>Wallboard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wallboard</label>
    <type>Checkbox</type>
</CustomField>