force-app/main/default/objects/Quote_Line_Detail__c/fields/X70_80_nummer__c.field-meta.xml
<CustomField>
    <fullName>X70_80_nummer__c</fullName>
    <label>70/80 nummer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>