force-app/main/default/objects/Quote_Line_Detail__c/validationRules/Can_not_be_updated_by_user.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_not_be_updated_by_user</fullName>
    <active>false</active>
    <description>A record can not be updated by user in the normal way. Users will do this via component.</description>
    <errorConditionFormula>AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;, NOT(ISNEW()))</errorConditionFormula>
    <errorMessage>You are not allowed to edit a Quote Line Detail directly.</errorMessage>
</ValidationRule>